Add link hightlighting

--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -55,6 +55,7 @@
       <!-- Nav -->
       <nav class="p-3 space-y-1">
         <a
+        id="start-link"
         hx-get="/docs/start"
         hx-target="#main-content"
         hx-swap="innerHTML"
