Add start, basics

--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -55,7 +55,7 @@
       <!-- Nav -->
       <nav class="p-3 space-y-1">
         <a
-        id="start-link"
+        id="link-0"
         hx-get="/docs/start"
         hx-target="#main-content"
         hx-swap="innerHTML"
@@ -67,6 +67,7 @@
         </a>
 
         <a
+          id="link-1"
           hx-get="/docs/basics"
           hx-target="#main-content"
           hx-swap="innerHTML"
@@ -77,6 +78,7 @@
         </a>
 
         <a
+          id="link-2"
           hx-get="/docs/values"
           hx-target="#main-content"
           hx-swap="innerHTML"
@@ -87,7 +89,7 @@
         </a>
 
         <a 
-          hx-get="/docs/variables"
+          id="link-3"
           hx-target="#main-content"
           hx-swap="innerHTML"
           class="flex items-center gap-3 rounded-lg px-3 py-2
@@ -97,6 +99,7 @@
         </a>
 
         <a
+          id="link-4"
           hx-get="/docs/expressions"
           hx-target="#main-content"
           hx-swap="innerHTML"
@@ -107,6 +110,7 @@
         </a>
 
         <a
+          id="link-5"
           hx-get="/docs/control"
           hx-target="#main-content"
           hx-swap="innerHTML"
@@ -117,6 +121,7 @@
         </a>
 
         <a
+          id="link-6"
           hx-get="/docs/functions"
           hx-target="#main-content"
           hx-swap="innerHTML"
@@ -127,6 +132,7 @@
         </a>
 
         <a
+          id="link-7"
           hx-get="/docs/structures"
           hx-target="#main-content"
           hx-swap="innerHTML"
@@ -137,6 +143,7 @@
         </a>
 
         <a
+          id="link-8"
           hx-get="/docs/stdlib"
           hx-target="#main-content"
           hx-swap="innerHTML"
@@ -147,16 +154,18 @@
         </a>
 
         <a
+          id="link-9"
           hx-get="/docs/errors"
           hx-target="#main-content"
           hx-swap="innerHTML"
           class="flex items-center gap-3 rounded-lg px-3 py-2
                  text-gray-300 hover:bg-gray-800 hover:text-white cursor-pointer">
           <span class="h-2 w-2 rounded-full bg-gray-500"></span>
-          Errors and Dignostics
+          Errors and Diagnostics
         </a>
 
         <a
+        id="link-10"
         hx-get="/docs/scope"
         hx-target="#main-content"
         hx-swap="innerHTML"
